--- a/.github/workflows/typst_workflow.yml
+++ b/.github/workflows/typst_workflow.yml
@@ -5,8 +5,8 @@ on:
   pull_request:
     types: [opened, reopened, synchronize, closed]
     paths:
-      - '**.typ'
       - '!**template.typ'
+      - '**.typ'
 
 jobs:
   fetch:
@@ -48,6 +48,14 @@ jobs:
   compile:
     needs: [fetch, log]
     uses: Error-418-SWE/Documenti/.github/workflows/compile_document.yml@src
+    with:
+      file_name: ${{ needs.fetch.outputs.file_name }}
+      file_path: ${{ needs.fetch.outputs.file_path }}
+
+  deploy:
+    if: github.event.pull_request.merged == true
+    needs: [fetch, log]
+    uses: Error-418-SWE/Documenti/.github/workflows/deploy_website.yml@src
     with:
       file_name: ${{ needs.fetch.outputs.file_name }}
       file_path: ${{ needs.fetch.outputs.file_path }}
