Aggiunto glossario tra i file monitorati

--- a/.github/workflows/fetch_info.yml
+++ b/.github/workflows/fetch_info.yml
@@ -31,6 +31,7 @@ jobs:
         with:
           files: |
             **.typ
+            Glossario.json
       - name: Extract path
         id: path
         run: |
