Ignora template per il computo dei file cambiati

--- a/.github/workflows/fetch_info.yml
+++ b/.github/workflows/fetch_info.yml
@@ -32,6 +32,7 @@ jobs:
           files: |
             **.typ
             Glossario.json
+          files_ignore: template.typ
       - name: Extract path
         id: path
         run: |
