--- a/.github/workflows/fetch_info.yml
+++ b/.github/workflows/fetch_info.yml
@@ -33,6 +33,11 @@ jobs:
             **.typ
             Glossario.json
           files_ignore: template.typ
+      - name: Extract name w/o extension
+        id: name
+        run: |
+          FILE="${{ steps.files.outputs.all_changed_files }}"
+          echo "FILE_NAME=$(basename "${FILE}" | cut -d. -f1)" >> $GITHUB_OUTPUT
       - name: Extract path
         id: path
         run: |
@@ -49,11 +54,6 @@ jobs:
             echo "::error::More than one Typst source have been modified. Aborting."
             exit 1
           fi
-      - name: Extract name w/o extension
-        id: name
-        run: |
-          FILE="${{ steps.files.outputs.all_changed_files }}"
-          echo "FILE_NAME=$(basename "${FILE}" .typ)" >> $GITHUB_OUTPUT
       - name: Get latest version
         id: version
         run: |
