--- a/.github/labeler.yml
+++ b/.github/labeler.yml
@@ -37,8 +37,8 @@
 "Piano di Progetto":
 - "**/Piano di Progetto.*"
 
-"Piano di qualifica":
-- "**/Piano di qualifica.*"
+"Piano di Qualifica":
+- "**/Piano di Qualifica.*"
 
 "Specifica tecnica":
 - "**/Specifica tecnica*.*"
