--- a/.github/workflows/check_spelling.yml
+++ b/.github/workflows/check_spelling.yml
@@ -27,6 +27,8 @@ jobs:
         uses: actions/setup-python@v4
         with:
           python-version: '3.10'
+      - name: Install OpenAI library
+        run: pip install openai
       - name: Ask ChatGPT
         id: answer
         run: echo "ANSWER=$(python .github/scripts/spell_checker.py "${{ needs.fetch.outputs.file_path }}" "${{ needs.fetch.outputs.file_name }}")" >> $GITHUB_OUTPUT
