--- a/.github/workflows/check_spelling.yml
+++ b/.github/workflows/check_spelling.yml
@@ -17,8 +17,6 @@ jobs:
     permissions:
       pull-requests: write
     runs-on: ubuntu-latest
-    env:
-      OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
 
     steps:
       - name: Set up Git repository
@@ -31,12 +29,19 @@ jobs:
         run: pip install openai
       - name: Ask ChatGPT
         id: answer
-        run: echo "ANSWER=$(python .github/scripts/spell_checker.py "${{ needs.fetch.outputs.file_path }}" "${{ needs.fetch.outputs.file_name }}")" >> $GITHUB_OUTPUT
+        env:
+          OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
+        timeout-minutes: 30
+        run: |
+          python .github/scripts/spell_checker.py "${{ needs.fetch.outputs.file_path }}" "${{ needs.fetch.outputs.file_name }}.typ" >> output.txt
+          cat output.txt
+      - name: Change list to checklist
+        run: sed -i 's/^\-/- [ ]/' output.txt
       - name: Provide result
         uses: mshick/add-pr-comment@v2
         if: always()
         with:
-          message: ${{ steps.answer.outputs.answer }}
-          message-failure: "Spell checking fallito."
+          message-path: output.txt
+          message-failure: "Spell checking fallito. Controlla i log."
           message-id: "gpt-answer"
           refresh-message-position: true
