--- a/.github/workflows/fetch_info.yml
+++ b/.github/workflows/fetch_info.yml
@@ -9,9 +9,9 @@ on:
       file_name:
         description: "The name of the changed file"
         value: ${{ jobs.fetch.outputs.file_name }}
-      latest_version:
+      current_version:
         description: "The current document version"
-        value: ${{ jobs.fetch.outputs.latest_version }}
+        value: ${{ jobs.fetch.outputs.current_version }}
 
 jobs:
   fetch:
@@ -20,7 +20,7 @@ jobs:
     outputs:
       file_path: '${{ steps.path.outputs.file_path }}'
       file_name: '${{ steps.name.outputs.file_name }}'
-      latest_version: '${{ steps.version.outputs.latest_version }}'
+      current_version: '${{ steps.version.outputs.current_version }}'
 
     steps:
       - name: Set up Git repository
@@ -54,12 +54,12 @@ jobs:
             echo "::error::More than one Typst source have been modified. Aborting."
             exit 1
           fi
-      - name: Get latest version
+      - name: Get current version
         id: version
         run: |
-          echo "LATEST_VERSION=$(head -n1 "${{ steps.path.outputs.file_path }}/log.csv" | cut -d',' -f1)" >> $GITHUB_OUTPUT
+          echo "current_version=$(head -n1 "${{ steps.path.outputs.file_path }}/log.csv" | cut -d',' -f1)" >> $GITHUB_OUTPUT
       - name: Output to summary
         run: |
           echo "::notice::Path: ${{ steps.path.outputs.file_path }}"
           echo "::notice::Name: ${{ steps.name.outputs.file_name }}"
-          echo "::notice::Version: ${{ steps.version.outputs.latest_version }} (current)"
+          echo "::notice::Version: ${{ steps.version.outputs.current_version }} (current)"
