--- a/.github/workflows/release_typst.yml
+++ b/.github/workflows/release_typst.yml
@@ -1,7 +1,6 @@
-name: Typst document workflow
+name: Typst on document update
 
 on:
-  #triggered when PR is (re)opened or synchronized (new commit to head)
   pull_request:
     types: [opened, reopened, synchronize, closed]
     paths:
@@ -9,11 +8,16 @@ on:
       - '**.typ'
       - 'Glossario.json'
 
+concurrency:
+  group: typst-${{ github.ref }}
+  cancel-in-progress: true
+
 jobs:
   fetch:
     uses: Error-418-SWE/Documenti/.github/workflows/fetch_info.yml@src
 
   log:
+    name: Create log if missing
     needs: fetch
     runs-on: ubuntu-latest
     env:
@@ -62,6 +66,7 @@ jobs:
       file_path: ${{ needs.fetch.outputs.file_path }}
 
   publish:
+    name: Publish document
     if: github.event.pull_request.merged == true
     needs: [fetch, compile]
     runs-on: ubuntu-latest
@@ -81,8 +86,8 @@ jobs:
         run: echo "PUBLISH_PATH=$(dirname "${{ needs.fetch.outputs.file_path }}")" >> $GITHUB_OUTPUT
       - name: Output
         run: |
-          echo "::notice::Old path: ${{ needs.fetch.outputs.file_path }}"
-          echo "::notice::New path: ${{ steps.publish_path.outputs.PUBLISH_PATH }}"
+          echo "::notice::Source path: ${{ needs.fetch.outputs.file_path }}"
+          echo "::notice::Compiled document path: ${{ steps.publish_path.outputs.PUBLISH_PATH }}"
       - name: Remove older version
         run: |
           git checkout $TARGET_BRANCH
@@ -93,9 +98,9 @@ jobs:
           name: '${{ needs.fetch.outputs.file_name }}.pdf'
           path: '${{ github.workspace }}/${{ steps.publish_path.outputs.PUBLISH_PATH }}'
       - name: Rename file
-        run: mv -v "${{ github.workspace }}/${{ steps.publish_path.outputs.PUBLISH_PATH }}/${{ needs.fetch.outputs.file_name }}.pdf" "${{ github.workspace }}/${{ steps.publish_path.outputs.PUBLISH_PATH }}/${{ needs.fetch.outputs.file_name }}_v${{ needs.fetch.outputs.latest_version }}.pdf"
+        run: mv -v "${{ github.workspace }}/${{ steps.publish_path.outputs.PUBLISH_PATH }}/${{ needs.fetch.outputs.file_name }}.pdf" "${{ github.workspace }}/${{ steps.publish_path.outputs.PUBLISH_PATH }}/${{ needs.fetch.outputs.file_name }}_v${{ needs.fetch.outputs.current_version }}.pdf"
       - name: Publish document
         run: |
           git add "${{ steps.publish_path.outputs.PUBLISH_PATH }}/${{ needs.fetch.outputs.file_name }}*.pdf"
-          git commit -am "Publish document ${{ needs.fetch.outputs.file_name }} (v${{ needs.fetch.outputs.latest_version }})"
+          git commit -am "Publish document ${{ needs.fetch.outputs.file_name }} (v${{ needs.fetch.outputs.current_version }})"
           git push origin $TARGET_BRANCH
