--- a/.github/workflows/release_typst.yml
+++ b/.github/workflows/release_typst.yml
@@ -64,6 +64,7 @@ jobs:
     with:
       file_name: ${{ needs.fetch.outputs.file_name }}
       file_path: ${{ needs.fetch.outputs.file_path }}
+      file_version: ${{ needs.fetch.outputs.current_version }}
 
   publish:
     name: Publish document
