--- a/.github/workflows/release_typst_log.yml
+++ b/.github/workflows/release_typst_log.yml
@@ -30,6 +30,7 @@ jobs:
     with:
       file_name: ${{ needs.fetch.outputs.file_name }}
       file_path: ${{ needs.fetch.outputs.file_path }}
+      file_version: ${{ needs.fetch.outputs.current_version }}
 
   publish:
     if: github.event.pull_request.merged == true
