--- a/.github/workflows/release_typst_ondemand.yml
+++ b/.github/workflows/release_typst_ondemand.yml
@@ -27,16 +27,9 @@ concurrency:
   cancel-in-progress: true
 
 jobs:
-  deploy:
-    if: inputs.do_deploy
-    uses: Error-418-SWE/Documenti/.github/workflows/deploy_website.yml@src
-    with:
-      file_name: ${{ inputs.file_name }}
-      file_path: ${{ inputs.file_path }}
-
   retrieve:
     name: "Retrieve current version"
-    if: inputs.do_publish
+    if: inputs.do_publish || inputs.do_deploy
     runs-on: ubuntu-latest
     outputs:
       current_version: '${{ steps.version.outputs.current_version }}'
@@ -47,6 +40,15 @@ jobs:
         id: version
         run: |
           echo "CURRENT_VERSION=$(head -n1 "${{ inputs.file_path }}/log.csv" | cut -d',' -f1)" >> $GITHUB_OUTPUT
+
+  deploy:
+    if: inputs.do_deploy
+    needs: retrieve
+    uses: Error-418-SWE/Documenti/.github/workflows/deploy_website.yml@src
+    with:
+      file_name: ${{ inputs.file_name }}
+      file_path: ${{ inputs.file_path }}
+      file_version: ${{ needs.retrieve.outputs.current_version }}
 
   compile:
     if: inputs.do_publish
