--- a/.github/workflows/compile_document.yml
+++ b/.github/workflows/compile_document.yml
@@ -15,7 +15,7 @@ jobs:
     name: Compile document
     runs-on: ubuntu-latest
     env:
-      REQUIRED_FILES: 'template.typ logo.png roles.json Glossario.json'
+      REQUIRED_FILES: 'template.typ common.typ logo.png roles.json documents.json Glossario.json'
     steps:
       - name: Set up Git repository
         if: github.event.pull_request.merged == false
