--- a/.github/workflows/register_version.yml
+++ b/.github/workflows/register_version.yml
@@ -17,6 +17,11 @@ jobs:
     steps:
       - name: Set up Git repository
         uses: actions/checkout@v4
+      - name: Configure Git
+        run: |
+          git config --global user.email "actions@github.com"
+          git config --global user.name "GitHub Actions"
+          git fetch
       - name: Insert new version
         run: |
           sed -i "s/\"${{ inputs.file_name }}\": \".*\"/\"${{ inputs.file_name }}\": \"${{ inputs.file_version }}\"/" "documents.json"
