--- a/.github/workflows/check_spelling.yml
+++ b/.github/workflows/check_spelling.yml
@@ -1,11 +1,6 @@
 name: Spell checker
 
 on:
-  pull_request:
-    types: [opened, reopened, synchronize]
-    paths:
-      - '**.typ'
-      - '!**template.typ'
 
 jobs:
   fetch:
@@ -25,7 +20,7 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
-          python-version: '3.10'
+          python-version: "3.10"
       - name: Install OpenAI library
         run: pip install openai
       - name: Ask ChatGPT
