--- a/.github/workflows/compile_document.yml
+++ b/.github/workflows/compile_document.yml
@@ -15,7 +15,7 @@ jobs:
     name: Compile document
     runs-on: ubuntu-latest
     env:
-      REQUIRED_FILES: 'template.typ common.typ logo.png roles.json documents.json Glossario.json'
+      REQUIRED_FILES: "template.typ common.typ logo.png roles.json documents.json Glossario.json"
     steps:
       - name: Set up Git repository
         if: github.event.pull_request.merged == false
@@ -36,7 +36,7 @@ jobs:
           source_file: |
             ${{ inputs.file_path }}/${{ inputs.file_name }}.typ
       - name: Publish artifact
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
           name: ${{ inputs.file_name }}.pdf
           path: ${{ github.workspace }}/${{ inputs.file_path }}/${{ inputs.file_name }}.pdf
