--- a/.github/workflows/release_typst_log.yml
+++ b/.github/workflows/release_typst_log.yml
@@ -4,7 +4,7 @@ on:
   pull_request:
     types: closed
     paths:
-      - '**.csv'
+      - "**.csv"
 
 concurrency:
   group: typst-${{ github.ref }}
@@ -37,7 +37,7 @@ jobs:
     needs: [fetch, compile]
     runs-on: ubuntu-latest
     env:
-      TARGET_BRANCH: 'main'
+      TARGET_BRANCH: "main"
 
     steps:
       - name: Set up Git repository
@@ -59,10 +59,10 @@ jobs:
           git checkout $TARGET_BRANCH
           git rm --ignore-unmatch "${{ steps.publish_path.outputs.PUBLISH_PATH }}/${{ needs.fetch.outputs.file_name }}*.pdf"
       - name: Grab document
-        uses: actions/download-artifact@v3
+        uses: actions/download-artifact@v4
         with:
-          name: '${{ needs.fetch.outputs.file_name }}.pdf'
-          path: '${{ github.workspace }}/${{ steps.publish_path.outputs.PUBLISH_PATH }}'
+          name: "${{ needs.fetch.outputs.file_name }}.pdf"
+          path: "${{ github.workspace }}/${{ steps.publish_path.outputs.PUBLISH_PATH }}"
       - name: Rename file
         run: mv -v "${{ github.workspace }}/${{ steps.publish_path.outputs.PUBLISH_PATH }}/${{ needs.fetch.outputs.file_name }}.pdf" "${{ github.workspace }}/${{ steps.publish_path.outputs.PUBLISH_PATH }}/${{ needs.fetch.outputs.file_name }}_v${{ needs.fetch.outputs.current_version }}.pdf"
       - name: Publish document
