--- a/.github/workflows/release_typst.yml
+++ b/.github/workflows/release_typst.yml
@@ -57,6 +57,12 @@ jobs:
       file_name: ${{ needs.fetch.outputs.file_name }}
       file_path: ${{ needs.fetch.outputs.file_path }}
 
+  comment:
+    needs: compile
+    uses: Error-418-SWE/Documenti/.github/workflows/comment_artifact_link.yml@src
+    with:
+      artifact_url: ${{ needs.compile.outputs.artifact_url }}
+
   deploy:
     if: github.event.pull_request.merged == true
     needs: [fetch, log]
