--- a/.github/workflows/register_version.yml
+++ b/.github/workflows/register_version.yml
@@ -22,6 +22,7 @@ jobs:
           git config --global user.email "actions@github.com"
           git config --global user.name "GitHub Actions"
           git fetch
+          git checkout ${{ github.event.pull_request.head.ref }}
       - name: Insert new version
         run: |
           sed -i "s/\"${{ inputs.file_name }}\": \".*\"/\"${{ inputs.file_name }}\": \"${{ inputs.file_version }}\"/" "documents.json"
@@ -29,4 +30,4 @@ jobs:
         run: |
           git add documents.json
           git commit -am "Aggiornata versione ${{ inputs.file_name }}"
-          git push origin src
+          git push origin HEAD:${{ github.event.pull_request.head.ref }}
