--- a/.github/workflows/log_changes.yml
+++ b/.github/workflows/log_changes.yml
@@ -72,3 +72,12 @@ jobs:
           git add "${{ needs.fetch.outputs.file_path }}/log.csv"
           git commit -m "Aggiunti dettagli di rilascio"
           git push origin HEAD:${{ github.event.pull_request.head.ref }}
+
+  register:
+    name: Register new version
+    if: github.event.review.state == 'approved' && needs.fetch.outputs.file_name != ''
+    needs: [fetch, version]
+    uses: Error-418-SWE/Documenti/.github/workflows/register_version.yml@src
+    with:
+      file_name: ${{ needs.fetch.outputs.file_name }}
+      file_version: ${{ needs.version.outputs.next_version }}
