--- a/3 - PB/Documentazione interna/Verbali/24-02-25/tasks.json
+++ b/3 - PB/Documentazione interna/Verbali/24-02-25/tasks.json
@@ -12,7 +12,7 @@
 	{
 	  "ID task": "DOC-96",
 	  "Descrizione": "Fornire un link all'artifact prodotto durante la compilazione",
-	  "Ruolo": "Da definire"
+	  "Ruolo": "Amministratore"
 	},
 	{
 	  "ID task": "DOC-498",
@@ -62,7 +62,7 @@
 	{
 	  "ID task": "DOC-161",
 	  "Descrizione": "Redigere sezione Technical processes/Architecture Definition process",
-	  "Ruolo": "Da definire"
+	  "Ruolo": "Responsabile"
 	},
 	{
 	  "ID task": "DOC-510",
@@ -72,7 +72,7 @@
 	{
 	  "ID task": "DOC-162",
 	  "Descrizione": "Redigere sezione Technical processes/Design Definition process",
-	  "Ruolo": "Da definire"
+	  "Ruolo": "Responsabile"
 	},
 	{
 	  "ID task": "DOC-511",
@@ -157,11 +157,11 @@
 	{
 	  "ID task": "WMS-39",
 	  "Descrizione": "Definire schema ER database",
-	  "Ruolo": "Da definire"
+	  "Ruolo": "Progettista"
 	},
 	{
 	  "ID task": "WMS-42",
 	  "Descrizione": "Realizzare mockup UI",
-	  "Ruolo": "Da definire"
+	  "Ruolo": "Programmatore"
 	}
   ]
