Aggiunto ruolo mancante a WMS-58

--- a/3 - PB/Documentazione interna/Verbali/24-03-03/tasks.json
+++ b/3 - PB/Documentazione interna/Verbali/24-03-03/tasks.json
@@ -127,7 +127,7 @@
 	{
 	  "ID task": "WMS-58",
 	  "Descrizione": "Integrare caricamento SVG con API di sanificazione",
-	  "Ruolo": ""
+	  "Ruolo": "Programmatore"
 	},
 	{
 	  "ID task": "WMS-59",
