Aggiornata configurazione Manuale Utente

--- a/.github/labeler.yml
+++ b/.github/labeler.yml
@@ -28,8 +28,8 @@
 "Lettera di presentazione":
 - "**/Lettera di presentazione.*"
 
-"Manuale d'uso":
-- "**/Manuale d'uso*.*"
+"Manuale Utente":
+- "**/Manuale Utente*.*"
 
 "Norme di Progetto":
 - "**/Norme di Progetto.*"
