--- a/3 - PB/Documentazione interna/Verbali/24-03-17/tasks.json
+++ b/3 - PB/Documentazione interna/Verbali/24-03-17/tasks.json
@@ -120,7 +120,7 @@
 	  "Ruolo": "Programmatore"
 	},
 	{
-	  "Descrizione": "Implementare possibiltà di cancellare uno scaffale selezionato",
+	  "Descrizione": "Implementare possibilità di cancellare uno scaffale selezionato",
 	  "ID task": "DOC-625",
 	  "Ruolo": "Programmatore"
 	},
